--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,7 @@
   font-stretch:extra-expanded;
   font-weight: bold;
   color: rgb(58, 38, 38);
+  text-wrap: wrap;
 }
 .navbar-nav li :hover {
   
@@ -91,6 +92,7 @@
   display: flex;  
   margin-left: 10px;
 }
+
 .imgBuilder{
   display: flex;  
   flex-wrap: wrap;
@@ -174,7 +176,7 @@
 .sub-heading{
   width: auto;
   color: white;
-  margin-bottom:10px;
+  margin-bottom:10px;   
   background-color: #484aba;
   font-size: 25px;
   font-weight: bold;
@@ -187,10 +189,17 @@
   font-size: 30px;
   font-weight: bold;
 }
+.DescText{
+  font-weight: bold;
+ color:rgb(8, 0, 0);  
+ font-size: 18px;
+ width: auto; 
+}
+
 .imgText{
   width: 200px;
-  color: white;   
-  font-size: 15px;
+  color: rgb(8, 0, 0);   
+  font-size: 18px;
   font-weight: bold;
   align-items: center;
   text-wrap: wrap ;
@@ -201,8 +210,45 @@
 
 .cyberBlock{
  font-weight: bold;
- color: rgb(20, 2, 2);   
+ color:rgb(8, 0, 0);  
+ font-size: 18px;
+ height: 450px;
+ overflow-y: scroll;
+ width: auto; 
 }
+.visionMission{
+  font-weight: bold;
+  color:rgb(8, 0, 0);  
+  font-size: 18px;
+  width: auto; 
+}
+.customContainer{
+  font-weight: bold;
+ color:rgb(8, 0, 0);  
+ font-size: 18px;
+ height: 450px;
+ width: auto; 
+}
+
+.othersContainer{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  font-size: 30x;
+  }
+
+  .othersContainer li{
+    margin-left: 30px;
+    font-size: 20px;
+  }
+
+  .othersContainer li:hover{
+    font-size: 18px;
+    background-color: #4e586a;
+  }
+
+.customContainer
 .imgCyber{
   width: 100%;
 }
@@ -216,4 +262,42 @@
   color: white;
   padding-left: 20px;
   padding-right: 20px;
+}
+.carouselContainer  h3 {
+  color: rgb(18, 17, 17);
+  font-weight: bolder;
+}
+.carouselContainer  p {
+  color: rgb(18, 17, 17);
+  font-weight: bolder;
+}
+.contactHeading{
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ font-weight: bold;
+ font-size: 50;
+}
+.ContainerItems{
+  display: flex;  
+  justify-content: center;
+}
+.submitButton{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+}
+Form.Label{
+  font-weight: bold;
+}
+.contactInfo{
+  display: flex;
+  font-weight: bold;
+}
+.contactInfo{
+ margin: 10px;
+}
+.iconStyle{
+  margin-right: 5px
 }
