--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,16 @@
   }
 }
 
+.companyLogoText{
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+}
+.navbar{
+  background-color: #4c4d95;
+  border-radius: 10px;
+  padding: 5px;
+}
 .navbar-nav li{
   background-color: #0c2c68;
   margin-left : 5px;
@@ -78,7 +88,8 @@
   padding: 0;  
 }
 .dropdown-menu li {
-  width: 220px;
+  width: 200px;
+  word-wrap: normal;
 }
 
 .button-container .selected-button:hover{
@@ -137,11 +148,15 @@
   background:rgb(12, 19, 27);
   color: white;
   margin: 5px;
+  border-radius: 20px;
 }
 
 /* .button-container .button {
   margin-top: 10;
 } */
+.button{
+  border-radius: 20px;
+}
 
 .button-container .selected-button::after{
   background:rgb(12, 19, 27);
@@ -173,10 +188,18 @@
   margin: 5px;
 }
 
+.nav-item{
+  border-radius: 20px;
+}
+
+.dropdown-menu li{
+  border-radius: 20px;
+}
 .sub-heading{
   width: auto;
   color: white;
   margin-bottom:10px;   
+  padding-right: 3px;
   background-color: #484aba;
   font-size: 25px;
   font-weight: bold;
@@ -226,10 +249,28 @@
   font-weight: bold;
  color:rgb(8, 0, 0);  
  font-size: 18px;
- height: 450px;
- width: auto; 
+ min-height: 450px;
 }
 
+.imageBuild{
+  border-radius: 20px;
+}
+
+img{
+  border-radius: 20px;
+}
+
+div{
+  border-radius: 20px;
+ padding-left: 3px;
+ padding-top: 1px;
+ padding-right: 3px;
+}
+
+.paraConatainer
+{
+  padding-top: 10px;
+}
 .othersContainer{
   display: flex;
   align-items: center;
@@ -314,4 +355,12 @@ Form.Label{
 
 .feedbackForm div {
   margin-bottom: 5px;
+}
+.buttonSend{
+  font-weight: bold;
+  background-color: green;
+  font-size: 20;
+}
+.buttonSend:hover{
+  background-color: yellowgreen;
 }
